Add new bitmask bool for custom thumbnails
This will fix performance issues regarding thumbnails on Qobo, but now we have two duplicate bitmaskToArray functions.

--- a/private/skins/qobo/templates/components/_index_submission.twig
+++ b/private/skins/qobo/templates/components/_index_submission.twig
@@ -3,7 +3,7 @@
         <tr valign="top">
             <td>
                 <a href="/view/{{ submission.id }}">
-                    <img src="{{ thumbnail(submission.id, submission.type) }}" width="120"
+                    <img src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}" width="120"
                          alt="{{ submission.title }}" class="content-image">
                 </a>
             </td>
