--- a/private/skins/qobo/templates/components/_index_submission_3.twig
+++ b/private/skins/qobo/templates/components/_index_submission_3.twig
@@ -2,7 +2,7 @@
 <div class="content-entry-index">
     <div class="content-image-container">
         <a href="/view/{{ submission.id }}" class="content-image-link">
-            <img src="{{ thumbnail(submission.id, submission.type) }}"
+            <img src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}"
                  alt="{{ submission.title }}"
                  title="{{ submission.title }} by {{ submission.author.info.username }}"
                  class="content-image">
