--- a/private/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
+++ b/private/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
@@ -3,7 +3,7 @@
 		<div class="row"><a href="view/{{ submission.video_id }}">
 				<div class="col-lg-12" style="margin-bottom:15px">
 					<div class="img-thumbnail">
-						<img class="img-fluid" src="{{ thumbnail(submission.id, submission.type) }}">
+						<img class="img-fluid" src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}">
 					</div>
 				</div>
 			</a>
