--- a/private/skins/squarebracket_bootstrap/templates/_layout.twig
+++ b/private/skins/squarebracket_bootstrap/templates/_layout.twig
@@ -115,7 +115,7 @@
 	<div class="container">
 		<div class="card">
 			<div class="card-body">
-				<h4 class="my-0">OpenSB {{ squarebracket_version }}</h4>
+				<h4 class="my-0">OpenSB Orange {{ squarebracket_version }}</h4>
 				<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
 				<!-- is it me or is morale a bit... low? it seems like there's no hope for squarebracket or some shit. don't be surprised if i end up leaving the project -gr 8/3/2021 -->
 				<p class="my-0">© 2021-{{ 'now' | date('Y') }} OpenSB contributors</p>
