Content rating to Audience rating

--- a/private/skins/qobo/templates/upload.twig
+++ b/private/skins/qobo/templates/upload.twig
@@ -38,7 +38,7 @@
                             </div>
 
                             <div class="form-input">
-                                <label for="rating">Select content rating (required):</label>
+                                <label for="rating">Select audience rating (required):</label>
 
                                 <select class="form-submit" name="rating" id="rating" required>
                                     <option value="general">General</option>
