--- a/private/skins/qobo/templates/watch.twig
+++ b/private/skins/qobo/templates/watch.twig
@@ -91,7 +91,7 @@
             {% endif %}
         </div>
         <hr>
-        <div>Content rating: {{ submission.rating | capitalize }}</div>
+        <div>Audience rating: {{ submission.rating | capitalize }}</div>
     </div>
     <div class="clear"></div>
     <br>
