--- a/private/skins/squarebracket_bootstrap/templates/watch.twig
+++ b/private/skins/squarebracket_bootstrap/templates/watch.twig
@@ -64,7 +64,7 @@
 							<hr class="mt-2 mb-3"/>
 							<div>
 								<small>
-									Content rating: {{ submission.rating | capitalize }}
+									Audience rating: {{ submission.rating | capitalize }}
 								</small>
 							</div>
 						</div>
