--- a/private/skins/qobo/templates/settings.twig
+++ b/private/skins/qobo/templates/settings.twig
@@ -14,10 +14,10 @@
         <form action="settings" method="post" enctype="multipart/form-data">
 
             <div class="text-title">
-                <span>Ratings</span>
+                <span>Audience rating</span>
             </div>
 
-            <p>Choose the option you are the most comfortable with. Higher rating submissions may not be appropriate.</p>
+            <p>Choose the highest audience rating you are most comfortable with. Higher rating submissions may not be appropriate.</p>
 
             <select class="form-submit" name="rating" id="rating">
                 <option value="general" {% if user_data.comfortable_rating == "general" %}selected{% endif %}>General</option>
