Refactor the way the source code is placed, just for a new list on the version page.
- Non-Composer libraries are now autoloaded, meaning that non-Orange/non-Composer libraries can be autoloaded along with Orange.
- Added a list of installed Composer packages, akin to MediaWiki. The Composer namespace actually comes from MediaWiki itself.
- Regarding the import of MediaWiki code (the Composer namespace)... MediaWiki's Special:Version page says that it's licensed on GPLv2, or "at your option" (in their words), any later version. So, it's GPL-2.0-or-later, which implies its more or less both GPL-2.0 and GPL-3.0, or something like that. AGPL-3.0 (OpenSB's license) is "not compatible" with GPL-2.0. But, if I read the AGPL-3.0 license correctly, it's possible for GPL-3.0 code to be in a AGPL-3.0 codebase. Does that apply to GPL-2.0-or-later, since it can also be in GPL-3.0? What the fuck is this mental gymnastics bullshit? I'm dizzy as shit over this, but I'm concluding that since MediaWiki can be licensed in GPL-3.0 due to how the "or-later" works in GPL-2.0-or-later, well, MediaWiki code can be in OpenSB.

--- a/private/skins/qobo/templates/version.twig
+++ b/private/skins/qobo/templates/version.twig
@@ -10,7 +10,7 @@
         <div class="content-box">
             <p>
                 This website is powered by OpenSB (Open SquareBracket). © 2021-{{ 'now' | date('Y') }}
-                {% for developer in developers %}
+                {% for developer in data.developers %}
                     {{ developer }}{{ not loop.last ? ',' }}
                 {% endfor %} and others.
             </p>
@@ -18,13 +18,13 @@
                 OpenSB is licensed under the AGPL 3.0 license.
             </p>
             <hr>
+            <h2>Installed software</h2>
             <table class="c1">
-                <caption>Software</caption>
                 <tr class="h">
                     <th>Product</th>
                     <th>Version</th>
                 </tr>
-                {% for thing in version_stats %}
+                {% for thing in data.software %}
                     <tr>
                         <td class="a">{{ thing.title }}</td>
                         <td class="b">{{ thing.info }}</td>
@@ -32,8 +32,8 @@
                 {% endfor %}
             </table>
             <hr>
+            <h2>Installed skins</h2>
             <table class="c1">
-                <caption>Skins</caption>
                 <tr class="h">
                     <th>Skin/Author</th>
                     <th>Description</th>
@@ -42,6 +42,40 @@
                     <tr>
                         <td class="a">{{ skin.metadata.name }}<br><small>by {{ skin.metadata.author }}</small></td>
                         <td class="b">{{ skin.metadata.description }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+            <hr>
+            <h2>Installed libraries</h2>
+            <table class="c1">
+                <tr class="h">
+                    <th>Library</th>
+                    <th>Version</th>
+                    <th>License</th>
+                    <th>Description</th>
+                    <th>Authors</th>
+                </tr>
+                {% for key, package in data.composer_packages %}
+                    <tr>
+                        <td class="a" width="200">{{ key }}</td>
+                        <td class="b" width="100">{{ package.version }}</td>
+                        <td class="b" width="75">
+                            {% for license in package.licenses %}
+                                {{ license }}{{ not loop.last ? ',' }}
+                            {% endfor %}
+                        </td>
+                        <td class="b">
+                            {{ package.description }}
+                        </td>
+                        <td class="b">
+                            {% for author in package.authors %}
+                                {% if author.homepage %}
+                                    <a href="{{ author.homepage }}">{{ author.name }}</a>{{ not loop.last ? ',' }}
+                                {% else %}
+                                    {{ author.name }}{{ not loop.last ? ',' }}
+                                {% endif %}
+                            {% endfor %}
+                        </td>
                     </tr>
                 {% endfor %}
             </table>
