--- a/private/skins/squarebracket_bootstrap/templates/_layout.twig
+++ b/private/skins/squarebracket_bootstrap/templates/_layout.twig
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block head %}{% endblock %}
 	<!-- REDO THIS REDO THIS REDO THIS REDO THIS -->
-	<link href="img/css/bootstrap.css" rel="stylesheet" id="bootstrap">
+	<link href="/img/css/bootstrap.css" rel="stylesheet" id="bootstrap">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-	<script src="assets/common_bootstrap.js"></script>
+	<script src="/assets/common_bootstrap.js"></script>
 	<script>
 		subscribe_string = '{{ __("Subscribe") }}';
 		unsubscribe_string = '{{ __("Unsubscribe") }}';
