--- a/private/skins/common/player.twig
+++ b/private/skins/common/player.twig
@@ -8,6 +8,7 @@
         type="module"
         src="https://cdn.jsdelivr.net/npm/@vime/core@^5/dist/vime/vime.esm.js"
 ></script>
+{{ submission.file }}
 <div style="text-align: left;">
     <vm-player
             style="--vm-player-theme: #e61ff7;"
