--- a/private/skins/qobo/templates/profile.twig
+++ b/private/skins/qobo/templates/profile.twig
@@ -119,7 +119,7 @@
                     <div>
                         <div class="journal-entry">
                             <div class="journal-title">
-                                <a href="read?j={{ journal.id }}">
+                                <a href="/read?j={{ journal.id }}">
                                     {{ journal.title|u.truncate(100, '...') }}
                                 </a>
                             </div>
