--- a/biscuit/stylesheets/_menus.scss
+++ b/biscuit/stylesheets/_menus.scss
@@ -13,9 +13,9 @@
     display: block;
     text-align: left;
     padding: 5px 0;
-    color: rgba(white, 80%);
+    color: rgba(black, 80%);
     &:hover {
-      color: white;
+      color: black;
     }
   }
 }
