--- a/biscuit/stylesheets/_variables.scss
+++ b/biscuit/stylesheets/_variables.scss
@@ -5,11 +5,11 @@
 
 $threshold: 75%; // contrast threshold
 
-$primary: #f14fff; // primary color (orange)
+$primary: #1b7fcc; // primary color
 $primary-darker: darken($primary, 33%); // darker primary color
-$secondary: #333; //secondary color (nearly white)
-$green: #198519;
-$red: #c02626;
+$secondary: #EEEEEE; //secondary color (nearly white)
+$green: #559900;
+$red: #993300;
 
 $color-map: (
         "primary": $primary,
@@ -49,12 +49,13 @@ $button-padding: 6px 11px;
 $button-padding-small: 3px 8px;
 
 // content boxes
-$content-box-background-color: #2a2a2a;
+$content-box-background-color: #FFF;
 $content-box-border-color: darken($secondary, 7.5%);
 $content-box-roundness: 5px;
+$context-box-padding: 12px;
 
 // header
-$header-main-height: 60px;
+$header-main-height: 48px;
 $header-user-height: 25px;
 
 // profile
