--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -60,7 +60,7 @@
     <div class="header">
         <div class="page">
             <div class="header-logo">
-                <a href="/"><img alt="{{ website_branding.name }}" class="logo" src="/img/logo.png"></a>
+                <a href="/"><img alt="{{ website_branding.name }}" class="logo" src="/img/sb_wordmark_black.png"></a>
             </div>
             {% for link in header_main_links() %}
                 <a class="menulink" href="{{ link.url }}">{{ link.name }}</a>
