--- a/biscuit/stylesheets/_footer.scss
+++ b/biscuit/stylesheets/_footer.scss
@@ -5,7 +5,7 @@
   padding: 15px 5px;
   line-height: 20px;
   clear: both;
-  background: $content-box-border-color;
-  border: 1px solid darken($content-box-border-color, 3%);
+  background: $content-box-background-color;
+  border: 1px solid $content-box-border-color;
   border-radius: $content-box-roundness;
 }
