--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -136,5 +136,6 @@
 </div>
 {% block scripts %}{% endblock %}
 <script src="/assets/common_new.js"></script>
+<!-- {{ version_banner() }} -->
 </body>
 </html>
