move most of orange into another namespace
orange was supposed to be a framework that i could use for multiple projects, but it has since bloated with shit that's only meant for opensb.

with BluffingoUpdaterSite, this has to change.

--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -117,7 +117,7 @@
         <div class="footer">
             <img src="/assets/opensb_logo.png" alt="OpenSB">
             <br>
-            <a href="/version">Powered by OpenSB Orange {{ squarebracket_version }}.</a>
+            <a href="/version">Powered by OpenSB {{ squarebracket_version }}.</a>
             <p>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</p>
             <a href="/privacy">
                 Privacy policy
