--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -92,12 +92,12 @@ img.img-responsive {
 	width: 100%;
 }
 
-div.label {
+.label {
 	font-weight: bold;
 	color: #666;
 }
 
-div.clear {
+.clear {
 	clear: both;
 }
 
