--- a/biscuit/stylesheets/_header.scss
+++ b/biscuit/stylesheets/_header.scss
@@ -5,7 +5,7 @@
   backdrop-filter: blur(10px);
 }
 
-div.header-links
+.header-links
 {
   text-align: right;
   margin-left: auto;
@@ -21,7 +21,7 @@ div.header-links
   }
 }
 
-div.header-logo
+.header-logo
 {
   img.logo {
     height: 30px;
@@ -54,7 +54,7 @@ td.h
   padding: 5px;
 }
 
-div.header-user
+.header-user
 {
   width: 100%;
   background-color: rgba(lighten($secondary, 1%), 0.9);
@@ -69,12 +69,12 @@ div.header-user
   display: flex;
 }
 
-div.header-user-notifications
+.header-user-notifications
 {
   margin-right: auto;
 }
 
-div.header-user-links
+.header-user-links
 {
   margin-left: auto;
 }
@@ -86,7 +86,7 @@ a.menulink
   font-size: 14px;
 }
 
-div.header
+.header
 {
   .page {
     justify-content: space-between;
