--- a/biscuit/stylesheets/_sections.scss
+++ b/biscuit/stylesheets/_sections.scss
@@ -14,6 +14,9 @@
       font-size: 14px;
       margin-left: 4px;
       align-self: center;
+      &.userlink {
+        margin-left: 0;
+      }
     }
 
     margin-bottom: 0.5em;
